2005-11-15  Luc Teirlinck  <teirllm@auburn.edu>

	* Makefile.in (lisp, shortlisp): Add rfn-eshadow.

2005-11-16  Nick Roberts  <nickrob@snap.net.nz>

	* .gdbinit: Make SIGTSTP work like SIGINT normally does.

2005-11-15  Andreas Schwab  <schwab@suse.de>

	* lisp.h (struct Lisp_Cons): Make cdr a union.
	(XCDR_AS_LVALUE): Adjust.
	(struct Lisp_Float): Make data a union.
	(XFLOAT_DATA): Adjust.

	* alloc.c (free_float): Make free list chaining aliasing-safe.
	(make_float): Likewise.
	(free_cons): Likewise.
	(Fcons): Likewise.
	(check_cons_list): Likewise.
	(Fmake_symbol): Likewise.
	(allocate_misc): Likewise.
	(free_misc): Likewise.
	(gc_sweep): Likewise.

2005-11-15  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* mac.c (HASHKEY_QUERY_CACHE): New define.
	(xrm_create_database, xrm_q_put_resource): Empty query cache.
	(xrm_get_resource): Use query cache.

	* image.c (init_image) [MAC_OS]: Don't call EnterMovies if
	inhibit_window_system is set.

2005-11-13  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macgui.h (USE_CG_TEXT_DRAWING): New define.
	(struct MacFontStruct) [USE_CG_TEXT_DRAWING]: New members cg_font
	and cg_glyphs.

	* macterm.c [USE_CG_TEXT_DRAWING] (mac_draw_string_cg): New function.
	(x_draw_glyph_string_foreground) [USE_CG_TEXT_DRAWING]: Use it.
	(XLoadQueryFont) [USE_CG_TEXT_DRAWING]: Set members cg_font and
	cg_glyphs in struct MacFontStruct if synthesized bold or italic is
	not used and font substitution never occurs for ASCII and Latin-1
	characters.
	(XLoadQueryFont): Maximum and minimum metrics are now those among
	ASCII characters.
	(XLoadQueryFont) [!MAC_OS8 || USE_ATSUI]: Apply WebKit-style
	height adjustments for Courier, Helvetica, and Times.

	* s/darwin.h (LIBS_CARBON) [!HAVE_CARBON]: Remove `-framework Carbon'.

2005-11-11  David Reitter <david.reitter@gmail.com>

	* macterm.c (syms_of_macterm): Remove macCtrlKey, macShiftKey,
	macMetaKey, macAltKey. Introduce Qctrl, Qmeta,
	Vmac_control_modifier / mac-control-modifier,